--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,7 +22,7 @@ body {
 nav {
     background: #F6F5F3;
     border-bottom: 1px solid #D4D4D4;
-    height: 4rem;
+    height: 3.60rem;
     line-height: 4rem;
     color: #000;
     padding-left: 2rem;
@@ -50,7 +50,7 @@ nav p {
 #itemPonto label {
     display: block;
     margin-bottom: 1rem;
-    font-size: 1.25rem;
+    font-size: 1.17rem;
     color: #717171;
 }
 
@@ -64,7 +64,7 @@ nav p {
 }
 
 #itemPonto input.data_registro {
-    width: 327px;
+    width: 92%;
 }
 
 #registerPonto {
@@ -74,9 +74,9 @@ nav p {
     padding: 12px;
     border-radius: 8px;
     font-family: 'inter';
-    font-size: 1.12rem;
-    font-weight: 500;
-    width: 353px;
+    font-size: 1.09rem;
+    font-weight: 700;
+    width: 100%;
     height: 3.57rem;
 }
 
@@ -109,6 +109,6 @@ nav p {
 
 #itemPonto .radios {
     color: #717171;
-    font-size: 1.25rem;
+    font-size: 1.17rem;
     margin-bottom: 16px;
 }
