--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -87,6 +87,10 @@ nav p {
 }
 
 
+#itemPonto input[type="time"] {
+    width: 120px;
+}
+
 #registrosBox {
     border: 1px solid #E3E3E3;
     padding: 15px;
