--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,7 +50,7 @@ nav p {
 #itemPonto label {
     display: block;
     margin-bottom: 1rem;
-    font-size: 1.17rem;
+    font-size: 1em;
     color: #717171;
 }
 
@@ -59,7 +59,7 @@ nav p {
     border: 1px solid #E3E3E3;
     border-radius: 8px;
     font-family: 'inter';
-    font-size: 1.25rem;
+    font-size: 1em;
     background: #fff;
 }
 
@@ -74,7 +74,7 @@ nav p {
     padding: 12px;
     border-radius: 8px;
     font-family: 'inter';
-    font-size: 1.09rem;
+    font-size: 1em;
     font-weight: 700;
     width: 100%;
     height: 3.57rem;
@@ -89,7 +89,6 @@ nav p {
 
 #itemPonto input[type="time"] {
     width: 80px;
-    border: 1px solid red;
 }
 
 #registrosBox {
@@ -109,11 +108,11 @@ nav p {
 }
 
 #registroItem span.horarios {
-    color: #4D4D4D;
+    color: #616161;
 }
 
 #itemPonto .radios {
     color: #717171;
-    font-size: 1.17rem;
+    font-size: 1em;
     margin-bottom: 16px;
 }
