--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -61,6 +61,7 @@ nav p {
     font-family: 'inter';
     font-size: 1em;
     background: #fff;
+    margin-bottom: 10px;
 }
 
 #itemPonto input.data_registro {
@@ -84,6 +85,9 @@ nav p {
     width: 20px;
     height: 20px;
     margin-left: 26px;
+    position: relative;
+    top: 4px;
+    left: -4px;
 }
 
 
@@ -112,7 +116,7 @@ div.container h2 {
 }
 
 #registroItem span.horarios {
-    color: #888888;
+    color: #9e9e9e;
 }
 
 #itemPonto .radios {
