--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -126,3 +126,17 @@ div.container h2 {
     font-size: 1em;
     margin-bottom: 16px;
 }
+
+
+#exportButton {
+    border: unset;
+    background-color: #cfc9bc;
+    color: #585449;
+    padding: 12px;
+    border-radius: 8px;
+    font-family: 'inter';
+    font-size: 1em;
+    font-weight: 700;
+    width: 100%;
+    height: 3.57rem;
+}
