--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -141,10 +141,26 @@ div.container h2 {
     height: 3.57rem;
 }
 
+#addFolgaBtn {
+    border: 1px solid #585449;
+    background-color: #fff;
+    color: #585449;
+    padding: 12px;
+    border-radius: 8px;
+    font-family: 'inter';
+    font-size: 1em;
+    font-weight: 700;
+    width: 100%;
+    height: 3.57rem;
+    margin-bottom: 35px;
+    outline: none;
+}
+
 span.copyright {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1em;
     color: #717171;
+    margin-bottom: 12px;
 }
